[gd_scene load_steps=76 format=2]

[ext_resource path="res://assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Levels/Main Menu/Main Menu.gd" type="Script" id=2]
[ext_resource path="res://TileMap/TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Character/Character_Controller.gd" type="Script" id=4]
[ext_resource path="res://Levels/Intervals/Interval1/Stage1Interval.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/hook/Hook.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/exit/Exit.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Cursor.tscn" type="PackedScene" id=8]
[ext_resource path="res://LevelTimer/LevelTimer.tscn" type="PackedScene" id=9]
[ext_resource path="res://Character/assets robot rojo/r_death_12.png" type="Texture" id=10]
[ext_resource path="res://Character/assets robot rojo/r_death_6.png" type="Texture" id=11]
[ext_resource path="res://Character/assets robot rojo/r_death_7.png" type="Texture" id=12]
[ext_resource path="res://Character/assets robot rojo/r_death_5.png" type="Texture" id=13]
[ext_resource path="res://Character/assets robot rojo/r_death_8.png" type="Texture" id=14]
[ext_resource path="res://Character/assets robot rojo/r_run_1.png" type="Texture" id=15]
[ext_resource path="res://Character/assets robot rojo/r_jump_4.png" type="Texture" id=16]
[ext_resource path="res://Character/assets robot rojo/r_idle_1.png" type="Texture" id=17]
[ext_resource path="res://Character/assets robot rojo/r_run_12.png" type="Texture" id=18]
[ext_resource path="res://Character/assets robot rojo/r_jump_6.png" type="Texture" id=19]
[ext_resource path="res://Character/assets robot rojo/r_run_4.png" type="Texture" id=20]
[ext_resource path="res://Character/assets robot rojo/r_run_3.png" type="Texture" id=21]
[ext_resource path="res://Character/assets robot rojo/r_run_5.png" type="Texture" id=22]
[ext_resource path="res://Character/assets robot rojo/r_run_11.png" type="Texture" id=23]
[ext_resource path="res://Character/assets robot rojo/r_run_14.png" type="Texture" id=24]
[ext_resource path="res://Character/assets robot rojo/r_run_7.png" type="Texture" id=25]
[ext_resource path="res://Character/assets robot rojo/r_jump_2.png" type="Texture" id=26]
[ext_resource path="res://Character/assets robot rojo/r_jump_5.png" type="Texture" id=27]
[ext_resource path="res://Character/assets robot rojo/r_jump_12.png" type="Texture" id=28]
[ext_resource path="res://Character/assets robot rojo/r_jump_7.png" type="Texture" id=29]
[ext_resource path="res://Character/assets robot rojo/r_jump_1.png" type="Texture" id=30]
[ext_resource path="res://Character/assets robot rojo/r_run_10.png" type="Texture" id=31]
[ext_resource path="res://Character/assets robot rojo/r_idle_19.png" type="Texture" id=32]
[ext_resource path="res://Character/assets robot rojo/r_idle_13.png" type="Texture" id=33]
[ext_resource path="res://Character/assets robot rojo/r_idle_4.png" type="Texture" id=34]
[ext_resource path="res://Character/assets robot rojo/r_run_16.png" type="Texture" id=35]
[ext_resource path="res://Character/assets robot rojo/r_run_13.png" type="Texture" id=36]
[ext_resource path="res://Character/assets robot rojo/r_idle_10.png" type="Texture" id=37]
[ext_resource path="res://Character/assets robot rojo/r_run_9.png" type="Texture" id=38]
[ext_resource path="res://Character/assets robot rojo/r_death_11.png" type="Texture" id=39]
[ext_resource path="res://Character/assets robot rojo/r_idle_20.png" type="Texture" id=40]
[ext_resource path="res://Character/assets robot rojo/r_run_8.png" type="Texture" id=41]
[ext_resource path="res://Character/assets robot rojo/r_idle_16.png" type="Texture" id=42]
[ext_resource path="res://Character/assets robot rojo/r_run_15.png" type="Texture" id=43]
[ext_resource path="res://Character/assets robot rojo/r_run_6.png" type="Texture" id=44]
[ext_resource path="res://Character/assets robot rojo/r_jump_3.png" type="Texture" id=45]
[ext_resource path="res://Character/assets robot rojo/r_run_2.png" type="Texture" id=46]
[ext_resource path="res://Character/assets robot rojo/r_idle_7.png" type="Texture" id=47]
[ext_resource path="res://Character/Character_State_Machine.gd" type="Script" id=48]
[ext_resource path="res://Character/Idle.gd" type="Script" id=49]
[ext_resource path="res://Character/assets robot rojo/r_flip.png" type="Texture" id=50]
[ext_resource path="res://Character/assets robot rojo/r_death_3.png" type="Texture" id=51]
[ext_resource path="res://Character/assets robot rojo/r_death_1.png" type="Texture" id=52]
[ext_resource path="res://Character/assets robot rojo/r_death_4.png" type="Texture" id=53]
[ext_resource path="res://Character/assets robot rojo/r_death_9.png" type="Texture" id=54]
[ext_resource path="res://Character/assets robot rojo/r_death_10.png" type="Texture" id=55]
[ext_resource path="res://Character/assets robot rojo/r_flip_shoot.png" type="Texture" id=56]
[ext_resource path="res://Character/state_name_displayer.gd" type="Script" id=57]
[ext_resource path="res://Character/Jump.gd" type="Script" id=58]
[ext_resource path="res://Character/RayCast2D.gd" type="Script" id=59]
[ext_resource path="res://Character/Lighting.gd" type="Script" id=60]
[ext_resource path="res://Character/Move.gd" type="Script" id=61]
[ext_resource path="res://Character/Attack.gd" type="Script" id=62]
[ext_resource path="res://Character/Tackle.gd" type="Script" id=63]
[ext_resource path="res://Character/Impulse.gd" type="Script" id=64]
[ext_resource path="res://Character/Line2DLighting.gd" type="Script" id=65]
[ext_resource path="res://sounds/mainMenuMusic.ogg" type="AudioStream" id=66]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 34 ), ExtResource( 47 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 42 ), ExtResource( 32 ), ExtResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 56 ) ],
"loop": true,
"name": "tackle",
"speed": 10.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 16 ) ],
"loop": true,
"name": "hook",
"speed": 20.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 46 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 44 ), ExtResource( 25 ), ExtResource( 41 ), ExtResource( 38 ), ExtResource( 31 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 36 ), ExtResource( 24 ), ExtResource( 43 ), ExtResource( 35 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 26 ), ExtResource( 45 ), ExtResource( 16 ), ExtResource( 27 ), ExtResource( 19 ), ExtResource( 29 ), ExtResource( 28 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "on_air",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.83038, 21.3771 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 52 ), ExtResource( 51 ), ExtResource( 53 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 39 ), ExtResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "START"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0313726, 0.027451, 0.027451, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0313726, 0.027451, 0.027451, 0 ), Color( 0.0313726, 0.027451, 0.027451, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[node name="Main Menu" type="Node"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -656.0
margin_top = -222.0
margin_right = 1244.0
margin_bottom = 765.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -720912, 47, 0, -720911, 47, 0, -720910, 47, 0, -786418, 47, 0, -786417, 47, 0, -786416, 47, 0, -655376, 47, 0, -655375, 47, 0, -655374, 47, 0, -720882, 47, 0, -720881, 47, 0, -720880, 47, 0, -589840, 47, 0, -589839, 47, 0, -589838, 47, 0, -655346, 47, 0, -655345, 47, 0, -655344, 47, 0, -524304, 47, 0, -524303, 47, 0, -524302, 47, 0, -589810, 47, 0, -589809, 47, 0, -589808, 47, 0, -458768, 47, 0, -458767, 47, 0, -458766, 47, 0, -524274, 47, 0, -524273, 47, 0, -524272, 47, 0, -393232, 47, 0, -393231, 47, 0, -393230, 47, 0, -458738, 47, 0, -458737, 47, 0, -458736, 47, 0, -327696, 47, 0, -327695, 47, 0, -327694, 47, 0, -393202, 47, 0, -393201, 47, 0, -393200, 47, 0, -262160, 47, 0, -262159, 47, 0, -262158, 47, 0, -327666, 47, 0, -327665, 47, 0, -327664, 47, 0, -196624, 47, 0, -196623, 47, 0, -196622, 47, 0, -262130, 47, 0, -262129, 47, 0, -262128, 47, 0, -131088, 47, 0, -131087, 47, 0, -131086, 47, 0, -196594, 47, 0, -196593, 47, 0, -196592, 47, 0, -65552, 47, 0, -65551, 47, 0, -65550, 47, 0, -131058, 47, 0, -131057, 47, 0, -131056, 47, 0, -16, 47, 0, -15, 47, 0, -14, 47, 0, -65522, 47, 0, -65521, 47, 0, -65520, 47, 0, 65520, 47, 0, 65521, 47, 0, 65522, 47, 0, 14, 47, 0, 15, 47, 0, 16, 47, 0, 131043, 47, 0, 131044, 47, 0, 131045, 47, 0, 131046, 47, 0, 131047, 47, 0, 131048, 47, 0, 131049, 47, 0, 131050, 47, 0, 131051, 47, 0, 131052, 47, 0, 131053, 47, 0, 131054, 47, 0, 131055, 47, 0, 131056, 47, 0, 131057, 47, 0, 131058, 47, 0, 65550, 47, 0, 65551, 47, 0, 65552, 47, 0, 196579, 47, 0, 196580, 47, 0, 196581, 47, 0, 196582, 47, 0, 196583, 47, 0, 196584, 47, 0, 196585, 47, 0, 196586, 47, 0, 196587, 47, 0, 196588, 47, 0, 196589, 47, 0, 196590, 47, 0, 196591, 47, 0, 196592, 47, 0, 196593, 47, 0, 196594, 47, 0, 131086, 47, 0, 131087, 47, 0, 131088, 47, 0, 262115, 47, 0, 262116, 47, 0, 262117, 47, 0, 262118, 47, 0, 262119, 47, 0, 262120, 47, 0, 262121, 47, 0, 262122, 47, 0, 262123, 47, 0, 262124, 47, 0, 262125, 47, 0, 262126, 47, 0, 262127, 47, 0, 262128, 47, 0, 262129, 47, 0, 262130, 47, 0, 196622, 47, 0, 196623, 47, 0, 196624, 47, 0, 262158, 47, 0, 262159, 47, 0, 262160, 47, 0, 327694, 47, 0, 327695, 47, 0, 327696, 47, 0, 393230, 47, 0, 393231, 47, 0, 393232, 47, 0, 524259, 47, 0, 524260, 47, 0, 524261, 47, 0, 524262, 47, 0, 524263, 47, 0, 524264, 47, 0, 524265, 47, 0, 524266, 47, 0, 524267, 47, 0, 524268, 47, 0, 524269, 47, 0, 524270, 47, 0, 524271, 47, 0, 524272, 47, 0, 524273, 47, 0, 524274, 47, 0, 524275, 47, 0, 524276, 47, 0, 524277, 47, 0, 524278, 47, 0, 524279, 47, 0, 524280, 47, 0, 524281, 47, 0, 524282, 47, 0, 524283, 47, 0, 524284, 47, 0, 524285, 47, 0, 524286, 47, 0, 524287, 47, 0, 458752, 47, 0, 458753, 47, 0, 458754, 47, 0, 458755, 47, 0, 458756, 47, 0, 458757, 47, 0, 458758, 47, 0, 458759, 47, 0, 458760, 47, 0, 458761, 47, 0, 458762, 47, 0, 458763, 47, 0, 458764, 47, 0, 458765, 47, 0, 458766, 47, 0, 458767, 47, 0, 458768, 47, 0, 589795, 47, 0, 589796, 47, 0, 589797, 47, 0, 589798, 47, 0, 589799, 47, 0, 589800, 47, 0, 589801, 47, 0, 589802, 47, 0, 589803, 47, 0, 589804, 47, 0, 589805, 47, 0, 589806, 47, 0, 589807, 47, 0, 589808, 47, 0, 589809, 47, 0, 589810, 47, 0, 589811, 47, 0, 589812, 47, 0, 589813, 47, 0, 589814, 47, 0, 589815, 47, 0, 589816, 47, 0, 589817, 47, 0, 589818, 47, 0, 589819, 47, 0, 589820, 47, 0, 589821, 47, 0, 589822, 47, 0, 589823, 47, 0, 524288, 47, 0, 524289, 47, 0, 524290, 47, 0, 524291, 47, 0, 524292, 47, 0, 524293, 47, 0, 524294, 47, 0, 524295, 47, 0, 524296, 47, 0, 524297, 47, 0, 524298, 47, 0, 524299, 47, 0, 524300, 47, 0, 524301, 47, 0, 524302, 47, 0, 524303, 47, 0, 524304, 47, 0, 655331, 47, 0, 655332, 47, 0, 655333, 47, 0, 655334, 47, 0, 655335, 47, 0, 655336, 47, 0, 655337, 47, 0, 655338, 47, 0, 655339, 47, 0, 655340, 47, 0, 655341, 47, 0, 655342, 47, 0, 655343, 47, 0, 655344, 47, 0, 655345, 47, 0, 655346, 47, 0, 655347, 47, 0, 655348, 47, 0, 655349, 47, 0, 655350, 47, 0, 655351, 47, 0, 655352, 47, 0, 655353, 47, 0, 655354, 47, 0, 655355, 47, 0, 655356, 47, 0, 655357, 47, 0, 655358, 47, 0, 655359, 47, 0, 589824, 47, 0, 589825, 47, 0, 589826, 47, 0, 589827, 47, 0, 589828, 47, 0, 589829, 47, 0, 589830, 47, 0, 589831, 47, 0, 589832, 47, 0, 589833, 47, 0, 589834, 47, 0, 589835, 47, 0, 589836, 47, 0, 589837, 47, 0, 589838, 47, 0, 589839, 47, 0, 589840, 47, 0 )

[node name="Character" type="KinematicBody2D" parent="." groups=[
"player",
]]
position = Vector2( -402.68, 484.571 )
collision_layer = 4
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Character"]
visible = false
margin_left = -57.6632
margin_top = -43.6057
margin_right = 59.3368
margin_bottom = -16.6057
align = 1
valign = 1
script = ExtResource( 57 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_State_Machine" type="Node" parent="Character"]
script = ExtResource( 48 )

[node name="Idle" type="Node" parent="Character/Character_State_Machine"]
script = ExtResource( 49 )

[node name="Move" type="Node" parent="Character/Character_State_Machine"]
script = ExtResource( 61 )

[node name="Jump" type="Node" parent="Character/Character_State_Machine"]
script = ExtResource( 58 )

[node name="Lighting" type="Node" parent="Character/Character_State_Machine"]
script = ExtResource( 60 )

[node name="Impulse" type="Node" parent="Character/Character_State_Machine"]
script = ExtResource( 64 )

[node name="TimerNoInput" type="Timer" parent="Character/Character_State_Machine/Impulse"]
wait_time = 0.2
one_shot = true

[node name="Attack" type="Node" parent="Character/Character_State_Machine"]
script = ExtResource( 62 )

[node name="Timer" type="Timer" parent="Character/Character_State_Machine/Attack"]
wait_time = 0.4
one_shot = true

[node name="Tackle" type="Node" parent="Character/Character_State_Machine"]
script = ExtResource( 63 )

[node name="BodyPivot" type="Position2D" parent="Character"]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Character/BodyPivot"]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "tackle"

[node name="RayCast2DLighting" type="RayCast2D" parent="Character"]
enabled = true
cast_to = Vector2( 0, 1500 )
collision_mask = 11
script = ExtResource( 59 )

[node name="Line2DLighting" type="Line2D" parent="Character"]
modulate = Color( 1.4, 1.4, 1.4, 1 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 4.0
default_color = Color( 0.4, 0.501961, 1, 0.470588 )
script = ExtResource( 65 )

[node name="Cursor" parent="Character" instance=ExtResource( 8 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character"]
position = Vector2( -0.250854, 2 )
shape = SubResource( 2 )
one_way_collision_margin = 50.0

[node name="LevelTimer" parent="Character" instance=ExtResource( 9 )]
visible = false
position = Vector2( -13.983, -207.664 )

[node name="ImpulseTimer" type="Timer" parent="Character"]
wait_time = 0.1
one_shot = true

[node name="ShootTimer" type="Timer" parent="Character"]
wait_time = 0.05
one_shot = true

[node name="HitPositionLeft" type="Position2D" parent="Character"]
position = Vector2( 333.328, -205.631 )

[node name="HitPositionRight" type="Position2D" parent="Character"]
position = Vector2( 796.902, -269.431 )

[node name="DeathSprite" type="AnimatedSprite" parent="Character"]
visible = false
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 3 )
animation = "dead"

[node name="CanvasLayer" type="CanvasLayer" parent="Character"]

[node name="ColorRect" type="ColorRect" parent="Character/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.027451, 0.027451, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character"]
autoplay = "START"
anims/START = SubResource( 4 )
anims/fade_in = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 503.431, 295.167 )
current = true

[node name="Hook" parent="." instance=ExtResource( 6 )]
position = Vector2( 778.18, 262.756 )

[node name="Hook2" parent="." instance=ExtResource( 6 )]
position = Vector2( 881.053, 90.5802 )

[node name="Exit" parent="." instance=ExtResource( 7 )]
position = Vector2( 807.481, 452.511 )
next_scene = ExtResource( 5 )

[node name="MoveToScreen" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="UpTitle" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="UpStart" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="UpExit" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Title" type="Label" parent="."]
margin_left = 106.178
margin_top = 667.999
margin_right = 736.178
margin_bottom = 717.999
custom_fonts/font = SubResource( 6 )
text = "jumpin' j4ck flash"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Title"]

[node name="Start" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 770.474
margin_top = 403.109
margin_right = 845.474
margin_bottom = 502.109
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start2" type="Label" parent="."]
margin_left = 683.187
margin_top = 717.258
margin_right = 955.187
margin_bottom = 752.258
custom_fonts/font = SubResource( 8 )
text = "Press the portal 
    to start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Start2"]

[node name="Exit2" type="Label" parent="."]
margin_left = 5.79865
margin_top = 740.218
margin_right = 117.799
margin_bottom = 756.218
custom_fonts/font = SubResource( 9 )
text = "<- Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Exit2"]

[node name="Exit3" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -2.19855
margin_top = 422.0
margin_right = 140.801
margin_bottom = 515.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2DTitle" type="Position2D" parent="."]
position = Vector2( 119.692, 107.093 )

[node name="Position2DStart" type="Position2D" parent="."]
position = Vector2( 681.617, 354.038 )

[node name="Position2DExit" type="Position2D" parent="."]
position = Vector2( 0, 434.024 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 66 )
volume_db = -10.0
autoplay = true
[connection signal="state_changed" from="Character/Character_State_Machine" to="Character/Label" method="_on_Character_State_Machine_state_changed"]
[connection signal="timeout" from="Character/Character_State_Machine/Impulse/TimerNoInput" to="Character/Character_State_Machine/Impulse" method="_on_TimerNoInput_timeout"]
[connection signal="timeout" from="Character/Character_State_Machine/Attack/Timer" to="Character/Character_State_Machine/Attack" method="_on_Timer_timeout"]
[connection signal="timeOut" from="Character/LevelTimer" to="Character" method="_on_LevelTimer_timeOut"]
[connection signal="timeout" from="Character/ImpulseTimer" to="Character/Character_State_Machine/Lighting" method="_on_Timer_timeout"]
[connection signal="timeout" from="Character/ShootTimer" to="Character" method="_on_ShootTimer_timeout"]
[connection signal="animation_finished" from="Character/DeathSprite" to="Character" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="MoveToScreen" to="." method="_on_MoveToScreen_timeout"]
[connection signal="timeout" from="UpTitle" to="." method="_on_UpTitle_timeout"]
[connection signal="timeout" from="UpStart" to="." method="_on_UpStart_timeout"]
[connection signal="timeout" from="UpExit" to="." method="_on_UpExit_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Exit3" to="." method="_on_Exit3_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
